news, updates and distros linked with db

--- a/src/TnDW/WebBundle/Resources/config/routing.yml
+++ b/src/TnDW/WebBundle/Resources/config/routing.yml
@@ -10,7 +10,7 @@ tndw_web_distros:
 
 tndw_web_distro:
     pattern:  /distro/{distro}
-    defaults: { _controller: TnDWWebBundle:Distro:index }
+    defaults: { _controller: TnDWWebBundle:Distros:distro }
 
 tndw_web_distro_redirect:
     pattern: /distro/
