--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-app/logs
-app/logs/dev.log
-app/logs/prod.log
-app/cache
-web/.DS_Store
-.DS_Store
+/app/logs
+/app/logs/dev.log
+/app/logs/prod.log
+/app/cache
+/web/.DS_Store
+/.DS_Store
+/src/TnDW/WebBundle/Resources/public/directory
+/web/bundles/
+/app/bootstrap*
+/app/cache/*
+/app/logs/*
+/vendor/
+/app/config/parameters.yml
