--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,14 +1,25 @@
 parameters:
-    database_driver: pdo_mysql
-    database_host: 127.0.0.1
-    database_port: null
-    database_name: symfony
-    database_user: root
-    database_password: root
-    mailer_transport: smtp
-    mailer_host: 127.0.0.1
-    mailer_user: null
-    mailer_password: null
-    locale: en
-    secret: b74aa968796aa633ab6dfd8c977fec65e20adabb
-    database_path: null
+    database_driver:   pdo_pgsql
+    database_host:     DB_HOST
+    database_port:     DB_PORT
+    database_name:     DB_NAME
+    database_user:     DB_USER
+    database_password: DB_PASS
+
+    database_driver_trol:   pdo_pgsql
+    database_host_trol:     DB_HOST
+    database_port_trol:     DB_PORT
+    database_name_trol:     DB_NAME
+    database_user_trol:     DB_USER
+    database_password_trol: DB_PASS
+
+    mailer_transport:  smtp
+    mailer_host:       127.0.0.1
+    mailer_user:       ~
+    mailer_password:   ~
+
+    locale:            en
+    secret:            ThisTokenIsNotSoSecretChangeIt
+
+    facebookAppId:  FB_APPID
+    facebookAppSecret:  FB_APPSECRET
